--- a/package.json
+++ b/package.json
@@ -2,19 +2,28 @@
   "name": "give-me-the-worst-server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
+    "build": "tsc --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "cz-conventional-changelog": "^3.3.0"
+    "cz-conventional-changelog": "^3.3.0",
+    "nodemon": "^2.0.14",
+    "typescript": "^4.4.4"
   },
   "config": {
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
     }
+  },
+  "dependencies": {
+    "@types/node": "^16.11.7",
+    "apollo-server": "^3.5.0",
+    "dotenv": "^10.0.0",
+    "ts-node": "^10.4.0"
   }
 }
