--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint": "^8.2.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "mongoose": "^6.0.12",
     "ts-node": "^10.4.0"
   }
 }
