--- a/package.json
+++ b/package.json
@@ -4,16 +4,24 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "lint": "eslint \"./**/*{js,jsx,ts,tsx}\" --quiet"
+    "lint": "eslint \"./**/*{js,jsx,ts,tsx}\" --quiet",
+    "start": "nodemon --exec ts-node index.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.13",
+    "@types/graphql": "^14.5.0",
+    "@types/mongoose": "^5.11.97",
+    "@types/node": "^16.11.7",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.2.0",
     "eslint-config-airbnb": "^19.0.0",
-    "eslint-config-prettier": "^8.3.0"
+    "eslint-config-prettier": "^8.3.0",
+    "nodemon": "^2.0.15",
+    "ts-node": "^10.4.0",
+    "typescript": "^4.4.4"
   },
   "config": {
     "commitizen": {
@@ -23,7 +31,6 @@
   "dependencies": {
     "apollo-server": "^3.5.0",
     "graphql": "^16.0.1",
-    "mongoose": "^6.0.12",
-    "nodemon": "^2.0.15"
+    "mongoose": "^6.0.12"
   }
 }
