--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,12 +9,11 @@
     "noImplicitThis": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noImplicitReturns": true,
+    "noImplicitReturns": false,
     "skipLibCheck": true,
     "declaration": false,
     "noFallthroughCasesInSwitch": true,
     "composite": false,
-    "noImplicitAny": true,
     "moduleResolution": "node",
     "lib": ["dom", "es2016", "esnext.asynciterable"],
     "sourceMap": true,
