--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/graphql": "^14.5.0",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^16.11.7",
+    "@typescript-eslint/eslint-plugin": "^5.4.0",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.2.0",
     "eslint-config-airbnb": "^19.0.0",
@@ -30,6 +31,7 @@
   },
   "dependencies": {
     "apollo-server": "^3.5.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "graphql": "^16.0.1",
     "mongoose": "^6.0.12"
   }
