feat(resolvers, interfaces, models): add and delete places resolvers written, place schema written
Tested with Apollo client and all is working as expected. If a place already exists in an array it
will not be added, deleting of places works as expected

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "give-me-the-worst-server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
     "lint": "eslint \"./**/*{js,jsx,ts,tsx}\" --quiet",
     "start": "nodemon --exec ts-node index.ts"
