--- a/package.json
+++ b/package.json
@@ -31,8 +31,11 @@
   },
   "dependencies": {
     "apollo-server": "^3.5.0",
+    "bcrypt": "^5.0.1",
+    "dotenv": "^10.0.0",
     "eslint-plugin-prettier": "^4.0.0",
     "graphql": "^16.0.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.12"
   }
 }
