--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "give-me-the-worst-server",
   "version": "1.0.0",
-  "description": "",
+  "description": "Give me the worst server",
   "main": "index.ts",
   "scripts": {
     "lint": "eslint \"./**/*{js,jsx,ts,tsx}\" --quiet",
     "start": "nodemon --exec ts-node index.ts"
   },
   "keywords": [],
-  "author": "",
+  "author": "Christian Letter & Richard Barnes",
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.13",
@@ -20,6 +20,7 @@
     "eslint": "^8.2.0",
     "eslint-config-airbnb": "^19.0.0",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "nodemon": "^2.0.15",
     "ts-node": "^10.4.0",
     "typescript": "^4.4.4"
@@ -33,7 +34,6 @@
     "apollo-server": "^3.5.0",
     "bcrypt": "^5.0.1",
     "dotenv": "^10.0.0",
-    "eslint-plugin-prettier": "^4.0.0",
     "graphql": "^16.0.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.12"
